[gd_scene load_steps=8 format=3 uid="uid://nqyx64v8eagj"]

[ext_resource type="Texture2D" uid="uid://bsr1ak34ycj6k" path="res://Sprites/Objetos/world_02/BIGPISTON.png" id="1_ath0d"]
[ext_resource type="Script" path="res://Nodes/objetos/world_02/big_piston.gd" id="1_m7dnn"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_or256"]
size = Vector2(72, 48)

[sub_resource type="Animation" id="Animation_e54u7"]
resource_name = "CRUNCH"
length = 1.4
step = 0.1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Bigpiston:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7, 0.8, 0.9, 1, 1.1, 1.2, 1.3),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [6, 5, 4, 3, 2, 1, 0, 0, 1, 2, 3, 4, 5, 6]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("CollisionShape2D:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.7, 1.4),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [Vector2(0, -24), Vector2(0, 23), Vector2(0, -24)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Hurt_box/CollisionShape2D:disabled")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 0.6, 0.8),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 1,
"values": [true, false, true]
}

[sub_resource type="Animation" id="Animation_eumwc"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Bigpiston:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [6]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("CollisionShape2D:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(0, -24)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Hurt_box/CollisionShape2D:disabled")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_ncche"]
_data = {
"CRUNCH": SubResource("Animation_e54u7"),
"RESET": SubResource("Animation_eumwc")
}

[sub_resource type="RectangleShape2D" id="RectangleShape2D_3hajn"]
size = Vector2(68, 5)

[node name="Big_piston" type="AnimatableBody2D"]
z_index = 4
collision_layer = 4
collision_mask = 4
script = ExtResource("1_m7dnn")

[node name="Bigpiston" type="Sprite2D" parent="."]
texture = ExtResource("1_ath0d")
hframes = 7
frame = 6

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(0, -24)
shape = SubResource("RectangleShape2D_or256")

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_ncche")
}

[node name="Hurt_box" type="Area2D" parent="."]
collision_layer = 2097160
collision_mask = 2097160

[node name="CollisionShape2D" type="CollisionShape2D" parent="Hurt_box"]
position = Vector2(0, 46.5)
shape = SubResource("RectangleShape2D_3hajn")
disabled = true
debug_color = Color(0.997874, 0, 0.155978, 0.42)

[node name="Timer" type="Timer" parent="."]
one_shot = true

[connection signal="animation_finished" from="AnimationPlayer" to="." method="_on_animation_player_animation_finished"]
[connection signal="area_entered" from="Hurt_box" to="." method="_on_hurt_box_area_entered"]
[connection signal="timeout" from="Timer" to="." method="_on_timer_timeout"]
